// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../dbml"
  outputName = "schema.dbml"
}

datasource db {
  provider     = "mongodb"
  relationMode = "prisma"
  url          = env("DATABASE_URL")
}

model User {
  id       String  @id @default(auto()) @map("_id") @db.ObjectId
  name     String
  lastname String
  avatar   String?

  address   Address?
  birthdate DateTime?

  cretedGroups   ChatChannel[]    @relation("creator")
  chatChannels   ChatChannel[]    @relation(fields: [chatChannelIDs], references: [id])
  chatChannelIDs String[]         @db.ObjectId
  attatchments   Attatchment[]
  content        Content[]
  posts          Post[]           @relation("author")
  preferences    userPreferences?
  Comment        Comment[]

  interest      SubCategory[] @relation(fields: [interestIDs], references: [id])
  interestIDs   String[]      @db.ObjectId
  course        Category?     @relation(fields: [courseId], references: [id])
  courseId      String?       @db.ObjectId
  degree        String
  followedBy    User[]        @relation("UserFollows", fields: [followedByIDs], references: [id])
  followedByIDs String[]      @db.ObjectId
  following     User[]        @relation("UserFollows", fields: [followingIDs], references: [id])
  followingIDs  String[]      @db.ObjectId
  likes         Likes[]
  sharedPosts   SharedPost[]

  MessageSent Message[]
  login       Login?

  chats   chat[]   @relation(fields: [chatIDs], references: [id])
  chatIDs String[] @db.ObjectId

  createdAt DateTime @default(now())
}

model Login {
  id       String  @id @default(auto()) @map("_id") @db.ObjectId
  username String  @unique
  email    String  @unique
  phone    String? @unique
  password String
  role     Role    @default(USER)
  user     User    @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId   String  @unique @db.ObjectId

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Address is an embedded document
type Address {
  street String
  city   String
  state  String
  zip    String
}

enum Role {
  USER
  ADMIN
}

model userPreferences {
  id           String  @id @default(auto()) @map("_id") @db.ObjectId
  emailUpdates Boolean @default(true)
  phoneUpdates Boolean @default(true)
  userId       String  @unique @db.ObjectId
  user         User    @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model chat {
  id          String  @id @default(auto()) @map("_id") @db.ObjectId
  name        String?
  description String?

  members       User[]       @relation(fields: [userIDs], references: [id])
  userIDs       String[]     @db.ObjectId
  messages      Message[]
  chatChannel   ChatChannel? @relation(fields: [chatChannelId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  chatChannelId String?      @db.ObjectId

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Comment {
  id   String @id @default(auto()) @map("_id") @db.ObjectId
  text String

  authorId String @db.ObjectId
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  postId   String @db.ObjectId
  post     Post   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Post {
  id        String  @id @default(auto()) @map("_id") @db.ObjectId
  title     String
  content   String?
  published Boolean @default(false)
  private   Boolean @default(false)

  authorId       String        @db.ObjectId
  author         User?         @relation("author", fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  attatchments   Attatchment[]
  categoryIDs    String[]      @db.ObjectId
  categories     Category[]    @relation(fields: [categoryIDs], references: [id])
  subCategory    SubCategory[] @relation(fields: [subCategoryIDs], references: [id])
  subCategoryIDs String[]      @db.ObjectId

  userId String[] @db.ObjectId

  Comment Comment[]
  likes   Likes[]
  shared  SharedPost[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Likes {
  id     String @id @default(auto()) @map("_id") @db.ObjectId
  userId String @db.ObjectId
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  postId String @db.ObjectId
  post   Post   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model SharedPost {
  id     String @id @default(auto()) @map("_id") @db.ObjectId
  userId String @db.ObjectId
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  postId String @db.ObjectId
  post   Post   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Category {
  id    String @id @default(auto()) @map("_id") @db.ObjectId
  name  String @unique
  sigle String @unique

  postIDs           String[]      @db.ObjectId
  CategoriesOnPosts Post[]        @relation(fields: [postIDs], references: [id])
  user              User[]
  subCategories     SubCategory[]
  chatChannel       ChatChannel[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model SubCategory {
  id                String        @id @default(auto()) @map("_id") @db.ObjectId
  name              String
  sigle             String
  attatchments      Content[]
  userId            String[]      @db.ObjectId
  user              User[]        @relation(fields: [userId], references: [id])
  postIDs           String[]      @db.ObjectId
  CategoriesOnPosts Post[]        @relation(fields: [postIDs], references: [id])
  categoryIDs       String        @db.ObjectId
  category          Category      @relation(fields: [categoryIDs], references: [id])
  chatChannel       ChatChannel[] @relation(fields: [chatChannelIDs], references: [id])
  chatChannelIDs    String[]      @db.ObjectId

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model ChatChannel {
  id          String  @id @default(auto()) @map("_id") @db.ObjectId
  name        String
  description String?
  avatar      String?
  private     Boolean @default(false)

  members         User[]        @relation(fields: [userId], references: [id])
  userId          String[]      @db.ObjectId
  subcategories   SubCategory[] @relation(fields: [subcategoriesId], references: [id])
  subcategoriesId String[]      @db.ObjectId
  category        Category?     @relation(fields: [categoryId], references: [id])
  categoryId      String?       @db.ObjectId

  creator   User?   @relation("creator", fields: [creatorId], references: [id])
  creatorId String? @db.ObjectId
  chat      chat[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Attatchment {
  id           String   @id @default(auto()) @map("_id") @db.ObjectId
  originalName String
  mimetype     String
  url          String
  description  String?
  contentId    String?  @db.ObjectId
  Content      Content? @relation(fields: [contentId], references: [id])
  Post         Post?    @relation(fields: [postId], references: [id])
  postId       String?  @db.ObjectId
  User         User?    @relation(fields: [userId], references: [id])
  userId       String?  @db.ObjectId

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Content {
  id            String        @id @default(auto()) @map("_id") @db.ObjectId
  description   String?
  userId        String?        @db.ObjectId
  User          User?          @relation(fields: [userId], references: [id])
  attatchment   Attatchment[]
  category      SubCategory?  @relation(fields: [categoryId], references: [id])
  categoryId    String?       @db.ObjectId
  discriminator FileType?
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
}

enum FileType {
  TEST_FILE
  FILE
  BOOK
}

model Message {
  id      String @id @default(auto()) @map("_id") @db.ObjectId
  content String

  sender   User   @relation(fields: [senderId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  senderId String @db.ObjectId

  chat   chat   @relation(fields: [chatId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  chatId String @db.ObjectId

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum Status {
  online
  offline
}
